--- a/app/assets/stylesheets/pages/_terms.scss
+++ b/app/assets/stylesheets/pages/_terms.scss
@@ -1,4 +1,15 @@
 .terms-page {
 	background-color: $brown-medium;
 	padding: 90px 0 110px 0;
+	
+	ol {
+		li {
+			list-style-type: lower-alpha;
+			ol {
+				li {
+					list-style-type: lower-roman;
+				}
+			}
+		}
+	}
 }
