--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -94,12 +94,12 @@ section.about
             h2.title--up.text--yellow COMO COMPRAR
             p
               | Quer consumir alimentos orgânicos com preços acessíveis, diretamente de produtores locais, por meio da colaboração com outros cidadãos e cidadãs?
-              = link_to ' Clique aqui.', about_path
+            = link_to 'Saiba Como Comprar', about_path, class: 'btn btn--sm btn--brown'
           .col-sm-4
             h2.title--up.text--yellow SEJA UM COORDENADOR DE ENTREGA
             p
               | Receba alimentos orgânicos no endereço da sua escolha, pagando pouco ou nada, conheça pessoas como você e seja um agente transformador da sua comunidade.
-              = link_to ' Clique aqui.', 'https://triboviva.typeform.com/to/ua7QEp'
+            = link_to 'Ser um Coordenador', 'https://triboviva.typeform.com/to/ua7QEp', class: 'btn btn--sm btn--brown'
           .col-sm-4
             h2.title--up.text--brown Fique Conectado
             .socialLinks
