Block bank_slip when business day is low than 2 days before offer ends

--- a/app/views/checkouts/checkout.html.slim
+++ b/app/views/checkouts/checkout.html.slim
@@ -16,11 +16,12 @@ section.checkout
                     label#js-credit-card-checkbox-label.btn.btn--sm.btn--yellow.active Cartão de crédito
                     = check_box_tag :method, 'credit_card', true, id: 'js-payment-method-credit-card', style: 'display: none;'
 
-                    label#js-bank-slip-checkbox-label.btn.btn--sm.btn--yellow Boleto
-                    = check_box_tag :method, 'bank_slip', false, id: 'js-payment-method-bank-slip', style: 'display: none;'
+                    - if !@block_bank_slip
+                      label#js-bank-slip-checkbox-label.btn.btn--sm.btn--yellow Boleto
+                      = check_box_tag :method, 'bank_slip', false, id: 'js-payment-method-bank-slip', style: 'display: none;'
 
-                    label#js-transfer-checkbox-label.btn.btn--sm.btn--yellow Transferência/Depósito
-                    = check_box_tag :method, 'transfer', false, id: 'js-payment-method-transfer', style: 'display: none;'
+                    / label#js-transfer-checkbox-label.btn.btn--sm.btn--yellow Transferência/Depósito
+                    / = check_box_tag :method, 'transfer', false, id: 'js-payment-method-transfer', style: 'display: none;'
 
                   #js-creditcard-form
                     h3.title--up Preencha as Informações
