--- a/app/views/old_purchase_mailer/pending_payment.html.slim
+++ b/app/views/old_purchase_mailer/pending_payment.html.slim
@@ -3,24 +3,41 @@ p Para finalizar sua compra na Rede de Consumo Colaborativo Tribo Viva, basta vo
 p Se você já efetuou o pagamento e nos enviou o comprovante, por favor desconsidere este email.
 hr
 
-p = link_to 'CLIQUE AQUI PARA ENTRAR NO NOSSO SITE E ENVIAR O SEU COMPROVANTE', old_purchase_url(id: @purchase.transaction_id)
+p = link_to 'CLIQUE AQUI PARA ENTRAR NO NOSSO SITE E ENVIAR O SEU COMPROVANTE', old_purchase_url(id: @purchase.try(:transaction_id) || @purchase.try(:invoice_id))
 hr
 
 h3
   strong RESUMO DA COMPRA
-ul
-  li QTD. DE COTA(S) ADQUIRIDAS: #{@purchase.amount} cota(s)
-  li VALOR TOTAL DA COMPRA: #{number_to_currency (@purchase.amount * (@purchase.offer.coordinator_tax + @purchase.offer.operational_tax + @purchase.offer.value))}
-  li A OFERTA EXPIRA EM: #{distance_of_time_in_words(@purchase.offer.offer_ends_at, Time.now)} (ou quando todas as cotas tiverem sido adquiridas).
-hr
+- if @purchase.is_a?(OldPurchase)
+  ul
+    li QTD. DE COTA(S) ADQUIRIDAS: #{@purchase.amount} cota(s)
+    li VALOR TOTAL DA COMPRA: #{number_to_currency (@purchase.amount * (@purchase.offer.coordinator_tax + @purchase.offer.operational_tax + @purchase.offer.value))}
+    li A OFERTA EXPIRA EM: #{distance_of_time_in_words(@purchase.offer.offer_ends_at, Time.now)} (ou quando todas as cotas tiverem sido adquiridas).
+  hr
+- else
+  - @purchase.orders.each do |order|
+    ul
+      li OFERTA: #{order.offer.title}
+      li QUANTIDADE: #{order.quantity} cota(s)
+      li VALOR TOTAL DA COMPRA: #{number_to_currency order.offer_value}
+      li A OFERTA EXPIRA EM: #{distance_of_time_in_words(order.offer.offer_ends_at, Time.now)} (ou quando todas as cotas tiverem sido adquiridas).
+    hr
 
 h3
   strong DADOS DA COLETA
-p
-  | DATA E HORÁRIO: #{@purchase.offer.delivery_time_range}
-  br
-  | LOCAL: #{@purchase.offer.deliver_coordinator.partial_address}
-  p Por motivos de segurança, o número do endereço só será fornecido para os participantes da oferta.
+- if @purchase.is_a?(OldPurchase)
+  p
+    | DATA E HORÁRIO: #{@purchase.offer.delivery_time_range}
+    br
+    | LOCAL: #{@purchase.offer.deliver_coordinator.partial_address}
+    p Por motivos de segurança, o número do endereço só será fornecido para os participantes da oferta.
+- else
+  - @purchase.orders.each do |order|
+    p
+      | DATA E HORÁRIO: #{order.offer.delivery_time_range}
+      br
+      | LOCAL: #{order.offer.deliver_coordinator.partial_address}
+      p Por motivos de segurança, o número do endereço só será fornecido para os participantes da oferta.
 
 hr
 
@@ -30,7 +47,7 @@ h4
   strong Transferência ou depósito ONLINE:
 ul
   li Salve o comprovante no seu computador
-  li = link_to 'Clique no aqui para entrar no nosso site e enviar o seu comprovante', old_purchase_url(id: @purchase.transaction_id)
+  li = link_to 'Clique no aqui para entrar no nosso site e enviar o seu comprovante', old_purchase_url(iid: @purchase.try(:transaction_id) || @purchase.try(:invoice_id))
   li Em "Anexe o Comprovante de Pagamento" Clique no botão "Selecionar arquivo"
   li Selecione a imagem do comprovante
   li Clique no botão "Finalizar Compra" para enviá-lo
@@ -40,7 +57,7 @@ h4
 ul
   li Imprima o comprovante
   li Tire uma foto do mesmo com seu celular
-  li = link_to 'Clique no aqui para entrar no nosso site e enviar o seu comprovante', old_purchase_url(id: @purchase.transaction_id)
+  li = link_to 'Clique no aqui para entrar no nosso site e enviar o seu comprovante', old_purchase_url(iid: @purchase.try(:transaction_id) || @purchase.try(:invoice_id))
   li Em "Anexe o Comprovante de Pagamento" Clique no botão "Selecionar arquivo"
   li Selecione a foto do comprovante
   li Clique no botão "Finalizar Compra" para enviá-lo
@@ -48,19 +65,19 @@ ul
 h3
   strong DADOS DA CONTA
 p
-  | BANCO: #{@purchase.offer.bank_account.bank}
+  | BANCO: #{@bank_account.bank}
   br
-  | NÚMERO DO BANCO: #{@purchase.offer.bank_account.bank_number}
+  | NÚMERO DO BANCO: #{@bank_account.bank_number}
   br
-  | AGÊNCIA: #{@purchase.offer.bank_account.agency}
+  | AGÊNCIA: #{@bank_account.agency}
   br
-  | CONTA CORRENTE: #{@purchase.offer.bank_account.cc}
+  | CONTA CORRENTE: #{@bank_account.cc}
   br
-  | OPERAÇÃO: #{@purchase.offer.bank_account.operation_code}
+  | OPERAÇÃO: #{@bank_account.operation_code}
   br
-  | CNPJ: #{@purchase.offer.bank_account.cnpj_cpf}
+  | CNPJ: #{@bank_account.cnpj_cpf}
   br
-  | RAZÃO SOCIAL: #{@purchase.offer.bank_account.owner_name}
+  | RAZÃO SOCIAL: #{@bank_account.owner_name}
 hr
 
 h3
