Fixes mailers, success pages, typo for terms & more...

--- a/app/views/old_purchases/show.html.slim
+++ b/app/views/old_purchases/show.html.slim
@@ -53,7 +53,7 @@ section.purchase
                 tr
                   th.title--up.small Oferta
                   th.title--up.small Quantidade
-                  th.title--up.small Valor Total
+                  th.title--up.small Valor Unitário
                 - if @purchase.nil?
                   tr
                     td = @purchase.offer.title
