--- a/app/views/pages/terms.html.slim
+++ b/app/views/pages/terms.html.slim
@@ -11,29 +11,20 @@
 	        	strong  Rede de Consumo Colaborativo Tribo Viva
 	        	| , com o detalhamento das responsabilidades das partes participantes.
 	        p.text--white 1. Sobre as partes da Rede:
-
 	        p.text--white
-	        	| Tribo Viva Serviços de Informação Ltda (triboviva.com.br):
-						|  doravante denominada
-						strong
-							|  Tribo.
-
-					p.text--white
-	        	span.text--yellow
-							strong
-								|  - Produtor(es) familiar(es) e agroecológico(s):
+	        	strong Tribo Viva Serviços de Informação Ltda (triboviva.com.br):
+	        	|  doravante denominada
+	        	strong  Tribo.
+	        p.text--white
+	        	strong Produtor(es) familiar(es) e agroecológico(s):
 	        	|  doravante denominado(s)
 	        	strong  fornecedor(es).
-
 	        p.text--white
-	        	span.text--yellow
-							strong
-								|  - Consumidore(s):
+	        	strong Consumidore(s):
 	        	|  doravante denominado(s)
 	        	strong  cotista(s).
 	        p.text--white
-	        	strong
-							| - Coordenador(es) de entrega:
+	        	strong Coordenador(es) de entrega:
 	        	|  doravante denominado(s) coordenador(es).
 	        p.text--white 2. Sobre a participação das partes na Rede:
 	        p.text--white 2.1 - Competirá a cada uma das partes participantes as seguintes responsabilidades:
@@ -41,8 +32,7 @@
 					ol
 						li
 							| Das responsabilidades da
-							span.title--up.text--yellow
-								strong  Tribo:
+							strong  Tribo:
 							ol
 								li Mapear e selecionar fornecedores de micro e pequeno porte, bem como cooperativas e associações destes produtores; praticantes da agricultura familiar, agroecologia, permacultura e/ou agroindústria familiar, com áreas de produção situadas na Região metropolitana de Porto Alegre ou em outras regiões do Estado do Rio Grande do Sul.
 								li
@@ -57,8 +47,7 @@
 							br
 							li
 								| Das responsabilidades dos
-								span.title--up.text--yellow
-									strong  fornecedores:
+								strong fornecedores:
 								ol
 									li Disponibilizar produtos oriundos da agricultura familiar, agroecologia, permacultura e/ou agroindústria familiar, certificados ou em processo de certificação, com qualidade e boas práticas de fabricação comprovadas.
 									li Apresentar valores em seus produtos que ofereçam sustentabilidade para suas propriedades e famílias, bem como, uma economia real para os cotistas.
@@ -68,8 +57,7 @@
 							br
 							li
 								| Das responsabilidades dos
-								span.title--up.text--yellow
-									strong  cotistas:
+								strong  cotistas:
 								ol
 									li
 										strong Observar e concordar com as especificidades das ofertas divulgadas pela Tribo, tais como: listas de produtos, quantidades, padrões de qualidade e valores; além das datas, horários e locais de coleta dos produtos respectivos (condições garantidas somente em ofertas divulgadas em plataformas online administradas pela Tribo).
@@ -77,7 +65,7 @@
 									li
 										| Fornecer comprovante de transferência ou depósito bancário autêntico e legível quando o pagamento for efetuado utilizando de alguma destas formas
 										strong
-											|  (a compra somente será confirmada após o envio de um comprovante válido, de acordo com as instruções exibidas na plataforma online da Tribo).
+											| (a compra somente será confirmada após o envio de um comprovante válido, de acordo com as instruções exibidas na plataforma online da Tribo).
 									li
 										| Coletar sua cota de produtos no dia, horário e local pré-determinados pela Tribo, ou enviar um representante, apresentando-o com, no mínimo, 12hs de antecedência, de acordo com a divulgação realizada em plataformas online administradas pela Tribo
 										strong
@@ -89,8 +77,7 @@
 							br
 							li
 								| Das responsabilidades dos
-								span.title--up.text--yellow
-									strong  cooordenadores:
+								strong  cooordenadores:
 								ol
 									li Preencher o cadastro da Tribo, fornecendo as informações solicitadas corretamente.
 									li Receber a entrega do fornecedor no horário e prazo pré-acordados com a administração da Tribo.
