Improves terms text

--- a/app/views/pages/terms.html.slim
+++ b/app/views/pages/terms.html.slim
@@ -1,98 +1,107 @@
 .terms-page
-	.container
-	  .row
-	    .col-sm-12.col-md-9.col-centered
-	      .form.brown-dark
-	        h1.title--up.text--yellow Termos de Compras
-	        /TODO add terms text
-	        p.text--white Prezado consumidor,
-	        p.text--white
-	        	| A seguir, descreveremos os termos de compra na
-	        	strong  Rede de Consumo Colaborativo Tribo Viva
-	        	| , com o detalhamento das responsabilidades das partes participantes.
-	        p.text--white 1. Sobre as partes da Rede:
-	        p.text--white
-	        	strong Tribo Viva Serviços de Informação Ltda (triboviva.com.br):
-	        	|  doravante denominada
-	        	strong  Tribo.
-	        p.text--white
-	        	strong Produtor(es) familiar(es) e agroecológico(s):
-	        	|  doravante denominado(s)
-	        	strong  fornecedor(es).
-	        p.text--white
-	        	strong Consumidore(s):
-	        	|  doravante denominado(s)
-	        	strong  cotista(s).
-	        p.text--white
-	        	strong Coordenador(es) de entrega:
-	        	|  doravante denominado(s) coordenador(es).
-	        p.text--white 2. Sobre a participação das partes na Rede:
-	        p.text--white 2.1 - Competirá a cada uma das partes participantes as seguintes responsabilidades:
-	        .text--white
-					ol
-						li
-							| Das responsabilidades da
-							strong  Tribo:
-							ol
-								li Mapear e selecionar fornecedores de micro e pequeno porte, bem como cooperativas e associações destes produtores; praticantes da agricultura familiar, agroecologia, permacultura e/ou agroindústria familiar, com áreas de produção situadas na Região metropolitana de Porto Alegre ou em outras regiões do Estado do Rio Grande do Sul.
-								li
-									strong Divulgar ofertas com valores que representem uma valorização da produção dos fornecedores e uma economia real para os cotistas, sem que nenhum outro valor seja acrescido sobre o preço de custo dos produtos, excetuando-se eventuais impostos, custos de transações bancárias e financeiras, taxa operacional e taxa de coordenação.
-								li Divulgar gratuitamente e de maneira ampla as ofertas dos fornecedores, permitindo que a maior quantidade possível de consumidores tenha conhecimento das ofertas e possam tirar proveito.
-								li Disponibilizar informações claras e detalhadas sobre os fornecedores, produtos, valores, formas de pagamento, dias, horários, coordenadores e locais de coleta.
-								li Repassar integralmente aos fornecedores os valores coletados com os cotistas para pagamento pelos custos dos produtos.
-								li
-									| Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção -
-									strong  2.1. / a
-									| ) sem ônus para as outras partes.
-							br
-							li
-								| Das responsabilidades dos
-								strong fornecedores:
-								ol
-									li Disponibilizar produtos oriundos da agricultura familiar, agroecologia, permacultura e/ou agroindústria familiar, certificados ou em processo de certificação, com qualidade e boas práticas de fabricação comprovadas.
-									li Apresentar valores em seus produtos que ofereçam sustentabilidade para suas propriedades e famílias, bem como, uma economia real para os cotistas.
-									li Disponibilizar informações claras e detalhadas sobre suas regiões, propriedades, produção, produtos, cultura e valores.
-									li Entregar os produtos nas quantidades, padrões de qualidade, datas, horários e locais pré-determinados pela Tribo e acordados pelos cotistas.
-									li Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção - 2.1. / b) sem ônus para as outras partes.
-							br
-							li
-								| Das responsabilidades dos
-								strong  cotistas:
-								ol
-									li
-										strong Observar e concordar com as especificidades das ofertas divulgadas pela Tribo, tais como: listas de produtos, quantidades, padrões de qualidade e valores; além das datas, horários e locais de coleta dos produtos respectivos (condições garantidas somente em ofertas divulgadas em plataformas online administradas pela Tribo).
-									li Realizar o pagamento integral dos valores necessários para aquisição da cota da oferta, a saber: valor dos produtos, eventuais impostos, taxa operacional, taxa de coordenação, tarifas bancárias e/ou outros custos da transação financeira, eletrônica ou não; dentro das condições e prazos pré-determinados pela Tribo e pelas instituições financeiras contratadas.
-									li
-										| Fornecer comprovante de transferência ou depósito bancário autêntico e legível quando o pagamento for efetuado utilizando de alguma destas formas
-										strong
-											| (a compra somente será confirmada após o envio de um comprovante válido, de acordo com as instruções exibidas na plataforma online da Tribo).
-									li
-										| Coletar sua cota de produtos no dia, horário e local pré-determinados pela Tribo, ou enviar um representante, apresentando-o com, no mínimo, 12hs de antecedência, de acordo com a divulgação realizada em plataformas online administradas pela Tribo
-										strong
-											| (atraso e/ou não comparecimento na coleta acarretará na perda dos produtos por parte do cotista, salvo acordo prévio com a administração da Tribo ou com o coordenador da entrega em questão).
-									li
-										| Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção -
-										strong  2.1. / c
-										|) sem ônus para as outras partes.
-							br
-							li
-								| Das responsabilidades dos
-								strong  cooordenadores:
-								ol
-									li Preencher o cadastro da Tribo, fornecendo as informações solicitadas corretamente.
-									li Receber a entrega do fornecedor no horário e prazo pré-acordados com a administração da Tribo.
-									li
-										strong Manter os alimentos em local acessível, limpo, seco, fresco, sem incidência direta da luz solar e, no mínimo, a 25 cm do piso.
-									li
-										strong Receber os cotistas no horário e prazo pré-determinados na oferta, com cortesia e presteza, para que estes possam coletar os alimentos comprados com tranquilidade e segurança.
-									li Informar imediatamente à administração da Tribo, via e-mail ou SMS, a ocorrência de problemas em qualquer etapa do processo (indisponibilidade, atrasos, falhas na entrega, qualidade dos produtos e postura de fornecedores e cotistas).
-									li Informar imediatamente à administração da Tribo, via e-mail ou SMS, no final da coleta dos alimentos, o sucesso da oferta e a sua finalização.
-									li Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção - 2.1. / d) sem ônus para as outras partes.
+  .container
+    .row
+      .col-sm-12.col-md-9.col-centered
+        .form.brown-dark
+          h1.title--up.text--yellow Termos de Compras
+          p.text--white Prezado consumidor,
+          p.text--white
+            | A seguir, descreveremos os termos de compra na
+            strong  Rede de Consumo Colaborativo Tribo Viva
+            | , com o detalhamento das responsabilidades das partes participantes.
+          p.text--white 1. Sobre as partes da Rede:
+          p.text--white
+            span.text--yellow
+              strong 
+                |  - Tribo Viva Serviços de Informação Ltda (triboviva.com.br):
+            |  doravante denominada
+            strong  Tribo.
+          p.text--white
+            span.text--yellow
+              strong 
+                |  - Produtor(es) familiar(es) e agroecológico(s):
+            |  doravante denominado(s)
+            strong  fornecedor(es).
+          p.text--white
+            span.text--yellow
+              strong 
+                |  - Consumidore(s):
+            |  doravante denominado(s)
+            strong  cotista(s).
+          p.text--white
+            span.text--yellow
+              strong 
+                |  - Coordenador(es) de entrega:
+            |  doravante denominado(s) coordenador(es).
+          p.text--white 2. Sobre a participação das partes na Rede:
+          p.text--white 2.1 - Competirá a cada uma das partes participantes as seguintes responsabilidades:
+          .text--white
+            ol
+              li
+                | Das responsabilidades da
+                span.title--up.text--yellow
+                  strong  Tribo:
+              ol
+                li Mapear e selecionar fornecedores de micro e pequeno porte, bem como cooperativas e associações destes produtores; praticantes da agricultura familiar, agroecologia, permacultura e/ou agroindústria familiar, com áreas de produção situadas na Região metropolitana de Porto Alegre ou em outras regiões do Estado do Rio Grande do Sul.
+                li
+                  strong Divulgar ofertas com valores que representem uma valorização da produção dos fornecedores e uma economia real para os cotistas, sem que nenhum outro valor seja acrescido sobre o preço de custo dos produtos, excetuando-se eventuais impostos, custos de transações bancárias e financeiras, taxa operacional e taxa de coordenação.
+                li Divulgar gratuitamente e de maneira ampla as ofertas dos fornecedores, permitindo que a maior quantidade possível de consumidores tenha conhecimento das ofertas e possam tirar proveito.
+                li Disponibilizar informações claras e detalhadas sobre os fornecedores, produtos, valores, formas de pagamento, dias, horários, coordenadores e locais de coleta.
+                li Repassar integralmente aos fornecedores os valores coletados com os cotistas para pagamento pelos custos dos produtos.
+                li
+                  | Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção -
+                  strong  2.1. / a
+                  | ) sem ônus para as outras partes.
+              br
+              li
+                | Das responsabilidades dos
+                span.title--up.text--yellow
+                  strong  fornecedores:
+              ol
+                li Disponibilizar produtos oriundos da agricultura familiar, agroecologia, permacultura e/ou agroindústria familiar, certificados ou em processo de certificação, com qualidade e boas práticas de fabricação comprovadas.
+                li Apresentar valores em seus produtos que ofereçam sustentabilidade para suas propriedades e famílias, bem como, uma economia real para os cotistas.
+                li Disponibilizar informações claras e detalhadas sobre suas regiões, propriedades, produção, produtos, cultura e valores.
+                li Entregar os produtos nas quantidades, padrões de qualidade, datas, horários e locais pré-determinados pela Tribo e acordados pelos cotistas.
+                li Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção - 2.1. / b) sem ônus para as outras partes.
+              br
+              li
+                | Das responsabilidades dos
+                span.title--up.text--yellow
+                  strong  cotistas:
+              ol
+                li
+                  strong Observar e concordar com as especificidades das ofertas divulgadas pela Tribo, tais como: listas de produtos, quantidades, padrões de qualidade e valores; além das datas, horários e locais de coleta dos produtos respectivos (condições garantidas somente em ofertas divulgadas em plataformas online administradas pela Tribo).
+                li Realizar o pagamento integral dos valores necessários para aquisição da cota da oferta, a saber: valor dos produtos, eventuais impostos, taxa operacional, taxa de coordenação, tarifas bancárias e/ou outros custos da transação financeira, eletrônica ou não; dentro das condições e prazos pré-determinados pela Tribo e pelas instituições financeiras contratadas.
+                li
+                  | Fornecer comprovante de transferência ou depósito bancário autêntico e legível quando o pagamento for efetuado utilizando de alguma destas formas
+                  strong
+                    |  (a compra somente será confirmada após o envio de um comprovante válido, de acordo com as instruções exibidas na plataforma online da Tribo).
+                li
+                  | Coletar sua cota de produtos no dia, horário e local pré-determinados pela Tribo, ou enviar um representante, apresentando-o com, no mínimo, 12hs de antecedência, de acordo com a divulgação realizada em plataformas online administradas pela Tribo
+                  strong
+                    | (atraso e/ou não comparecimento na coleta acarretará na perda dos produtos por parte do cotista, salvo acordo prévio com a administração da Tribo ou com o coordenador da entrega em questão).
+                li
+                  | Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção -
+                  strong  2.1. / c
+                  | ) sem ônus para as outras partes.
+              br
+              li
+                | Das responsabilidades dos
+                span.title--up.text--yellow
+                  strong  cooordenadores:
+              ol
+                li Preencher o cadastro da Tribo, fornecendo as informações solicitadas corretamente.
+                li Receber a entrega do fornecedor no horário e prazo pré-acordados com a administração da Tribo.
+                li
+                  strong Manter os alimentos em local acessível, limpo, seco, fresco, sem incidência direta da luz solar e, no mínimo, a 25 cm do piso.
+                li
+                  strong Receber os cotistas no horário e prazo pré-determinados na oferta, com cortesia e presteza, para que estes possam coletar os alimentos comprados com tranquilidade e segurança.
+                li Informar imediatamente à administração da Tribo, via e-mail ou SMS, a ocorrência de problemas em qualquer etapa do processo (indisponibilidade, atrasos, falhas na entrega, qualidade dos produtos e postura de fornecedores e cotistas).
+                li Informar imediatamente à administração da Tribo, via e-mail ou SMS, no final da coleta dos alimentos, o sucesso da oferta e a sua finalização.
+                li Resolver qualquer problema relativo às responsabilidades supracitadas nesta seção - 2.1. / d) sem ônus para as outras partes.
 
-					br
-					h3.text--white.text-center
-						| Tribo Viva Serviços de Informação Ltda. 
-						br
-						| Rua Felipe Camarão, 567 / 302 – Porto Alegre / RS 
-						br
-						| CNPJ: 19.970.585/0001-09
+          br
+          h3.text--white.text-center
+            | Tribo Viva Serviços de Informação Ltda. 
+            br
+            | CNPJ: 19.970.585/0001-09
